--- a/calculator.html
+++ b/calculator.html
@@ -68,7 +68,7 @@
         </script>
         DidasMba
       </p>
-      <a href="https://github.com/michalosman" target="_blank">
+      <a href="https://github.com/DidasMba" target="_blank">
         <i class="fab fa-github"></i
       ></a>
     </footer>
